Fix feed spacing and post size

--- a/src/index.css
+++ b/src/index.css
@@ -298,6 +298,7 @@
     margin: 0;
     padding: 0;
     border-radius: 0;
+    width: 100%;
   }
 
   .post-compact-header {
@@ -311,13 +312,18 @@
   }
 
   .post-compact-media {
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
     margin: 0;
-    margin-left: calc(-1 * (100vw - 100%) / 2);
-    margin-right: calc(-1 * (100vw - 100%) / 2);
     padding: 0;
     position: relative;
+  }
+  
+  .post-compact-media img,
+  .post-compact-media video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
   }
 }
 
